# plyreader

./: .gitignore  AUTHORS  CMakeLists.txt  README.md
cmake/: GResource.cmake
resources/: window.css
resources/gtk/: top.elfiny.plyreader.gresource.xml
resources/gtk/ui/: about.ui  app-menu.ui  tab-label.ui  window.ui
src/: main.c  ply-reader-actions.c  ply-reader-actions.h  ply-reader-app.c  ply-reader-app.h  ply-reader-tab-label.c  ply-reader-tab-label.h  ply-reader-window.c  ply-reader-window.h
